stacks/ibm/application/oidc-authservice-appid/sts-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authservice
spec:
  template:
    spec:
      serviceAccountName: oidc-authservice-service-account
