stacks/ibm/application/oidc-authservice-appid/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authservice
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /login
    route:
    - destination:
        host: authservice.istio-system.svc.cluster.local
        port:
          number: 8080
